--- a/WEB APP/style.css
+++ b/WEB APP/style.css
@@ -1,11 +1,11 @@
 * {
   box-sizing: border-box;
   margin: auto;
-  padding: 10;
+  padding: 20;
 }
 
 body{
-  background-color: rgb(239, 252, 1);
+  background-color: rgb(252, 106, 1);
 }
 
 h2{
@@ -16,7 +16,7 @@ h2{
 }
 
 .logo-text img{
-  height: 61px;
+  height: 81px;
   width: 160px;
   position: absolute;
   margin-top: -17px;
@@ -26,10 +26,10 @@ h2{
 
 .logo-text a,
 .cta {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Lucida Console", "Courier New", monospace;
   font-size: 1.4em;
   font-weight: 500;
-  color: rgb(34, 81, 210);
+  color: rgb(112, 10, 238);
   text-decoration: none;
 }
 
@@ -57,7 +57,7 @@ h2{
   font-family: 'Times New Roman', Times, serif;
   width: 340px;
   overflow: hidden;
-  background-color: rgb(36, 3, 251);
+  background-color: rgb(127, 251, 3);
   box-shadow: 0px 10px 15px 0px rgb(2, 210, 252);
   display: inline-block;
   flex-direction: column;
@@ -67,15 +67,15 @@ h2{
 
 .profile-image img {
   z-index: 1;
-  width: 100px;
-  height: 120px;
+  width: 150px;
+  height: 130px;
   position: relative;
   margin-top: 20px;
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 100px;
-  border: 10px solid rgb(10, 9, 11) ;
+  border: 10px solid rgb(28, 116, 66) ;
   transition-duration: 0.4s;
   transition-property: transform;
 }
@@ -96,6 +96,6 @@ header{
   justify-content: space-between;
   align-items: center;
   padding: 15px 10%;
-  background-color: rgb(252, 13, 13);
+  background-color: rgb(252, 13, 144);
   box-shadow: 0px 10px 15px 0px rgba(3, 11, 10, 0.989);
 }
